--- a/cfl-web/src/styles/globals.css
+++ b/cfl-web/src/styles/globals.css
@@ -74,16 +74,21 @@
     @apply bg-background text-foreground;
     height: 100vh;
     width: 100vw;
-  
   }
 }
 main {
   height: 100vh;
   width: 100vw;
 }
-.logoshadow {
-  filter: drop-shadow(4px 4px var(--primary));
+.icon-shadow {
+  filter: drop-shadow(2px 2px var(--primary));
 }
 .theme-shadow {
   text-shadow: 4px 3px 1px var(--secondary);
+}
+.shadow-inner {
+  --tw-shadow: inset 0 4px 8px 0 rgb(0 0 0 / 0.05);
+  --tw-shadow-colored: inset 0 4px 8px 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+    var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
