--- a/cfl-web/src/styles/globals.css
+++ b/cfl-web/src/styles/globals.css
@@ -72,13 +72,13 @@
   }
   body {
     @apply bg-background text-foreground;
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: 100dvw;
   }
 }
 main {
-  height: 100vh;
-  width: 100vw;
+  height: 100dvh;
+  width: 100dvw;
 }
 .icon-shadow {
   filter: drop-shadow(2px 2px var(--primary));
